RESOLVED FIXED305429
Fixed unretained local variable warnings in WebCore
https://bugs.webkit.org/show_bug.cgi?id=305429
Summary Fixed unretained local variable warnings in WebCore
Geoffrey Garen
Reported 2026-01-13 15:38:04 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-01-13 15:38:13 PST
Geoffrey Garen
Comment 2 2026-01-13 15:39:21 PST
EWS
Comment 3 2026-01-14 06:54:32 PST
Committed 305573@main (4fd4e9b15517): <https://commits.webkit.org/305573@main> Reviewed commits have been landed. Closing PR #56527 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.