Fixed unretained local variable warnings in WebCore https://bugs.webkit.org/show_bug.cgi?id=305429 rdar://168099724

Reviewed by Ryosuke Niwa.

Mechanical fixes dictated by the SaferCPP bot.

Canonical link: https://commits.webkit.org/305573@main